--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -55,7 +55,7 @@ body {
     width: 100%;
 }
 
-.titulo-depoimentos {
+.title-testimonies {
 	background-color: #0275D8;
 	padding-top: 25px;
 	padding-bottom: 25px;
